--- a/settings.html
+++ b/settings.html
@@ -688,215 +688,7 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 								Answers to hot topics that will really help you use the app effeciently and effectively.<br><br>
 								Remember, you can just send an SMS anytime to 1.424.9999945 with a quick question, suggestions, or idea.
 							</div>
-							<div style="width:100%;background:#fff;padding:10px" class="d-inline-block font-weight-light">
-								<table style="width:100%">
-									<tr>
-										<td style="width:10%">
-											<img src="images/s1.png" style="width:40px">
-										</td>
-										<td>
-											<strong><b>How do we safeguard your privacy and safety?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s2.png" style="width:40px;padding:5px;margin-top:10px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>How can I communicate anonymously using SMS?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s3.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What other unique services do we offer?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s4.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>How can Sugar Babies create and earn multiple revenue streams using site services and functions?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s5.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What is the 'Shortlist' function?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s6.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What are the different criteria I can use while browsing for members?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s7.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What are the different ways I can search for members?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s8.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What are your guidelines regarding member created content such as photos and videos uploaded by members?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s7.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What is your policy regarding member code of conduct?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s7.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What are your guidelines and limitations regarding acceptable and un-acceptable use of the site by members?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>									<tr>
-										<td style="width:10%">
-											<img src="images/s7.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What are your policies regading cooperating and sharing data with law enforcement agencies?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>
-									<tr>
-										<td style="width:10%">
-											<img src="images/s7.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What is a Sugar Daddy?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>									
-									<tr>
-										<td style="width:10%">
-											<img src="images/s7.png" style="width:40px;padding:5px;margin-top:10px">
-										</td>
-										<td>
-											<strong><b>What is a this app 100% comliant and comfortably legal on account of the services it provides?</strong>
-										</td>
-									</tr>
-									<tr>
-										<td style="width:10%">
-										</td>
-										<td>
-											Answers to hot topics that will really help you use the app effeciently and effectively.
-										</td>
-									</tr>
-									<tr><td colspan=2><br></td></tr>									
-								</table>
+							<div id="rfq" style="width:100%;background:#fff;padding:10px" class="d-inline-block font-weight-light">
 							</div>
 						</span>												
 						<a style="background:#fbfbfb" id="kb" class="list-group-item" href="frame_knowledgebase.html">
@@ -1172,6 +964,11 @@ margin-left:15px;font-family:Orbitron!Important;;font-size:16px!Important
 		function hide_search(){
 			window.parent.frames['ebay'].style.display='none'
 		}
+		
+		setTimeout(function(){
+			$.ajax({url:'https://sugardaddyone.com/x_faq.php',success:function(data){$$('rfq').innerHTML=data}})
+		},100)
+		
 	</script>
 	<script src="https://m.sugardaddylocal.com/custom_menu_updated.js"></script>
 	<script src="https://sugardaddylocal.com/js/jquery.js"></script>
