--- a/profileBrowse.html
+++ b/profileBrowse.html
@@ -17,7 +17,8 @@
 		<link href="https://lushmatch.com/assets/css/shadows.css" rel="stylesheet" />
 		<link href="https://lushmatch.com/assets/css/animate.css" rel="stylesheet">
 		<link href="https://lushmatch.com/assets/css/magic.css" rel="stylesheet">
-		<link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic|Open+Sans:300' rel='stylesheet' type='text/css'> 
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'> 
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'> 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -705,7 +706,7 @@
 							str+=	'									<div id="sun1" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:send_mail('+data[i].id+')"><img src="images/bubble_w.png" style="margin:20px;width:25px;"></a></div>'
 							str+=	'								</td>'
 							str+=	'								<td style="width:25%;text-align:center">'
-							str+=	'									<div id="sun2" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:videoCall(\''+data[i].login+'\')"><img src="images/video_w.png" style="margin:20px;width:25px;"></a></div>'
+							str+=	'									<div id="sun2" style="text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:videoCallX(\''+data[i].login+'\')"><img src="images/video_w.png" style="margin:20px;width:25px;"></a></div>'
 							str+=	'								</td>'
 							str+=	'								<td style="width:25%;text-align:center">'
 							str+=	'									<div id="sun3" style=";opacity:1;text-align:center;width:60px;height:60px;background:url(images/sun5.png);background-size:cover"><a href="javascript:buy_rose()"><img src="images/ir.png" style="margin:18px;width:25px;"></a></div>'
@@ -734,8 +735,8 @@
 							var gen=data[i].gender.toUpperCase()
 							var gg=gen
 							str+=	'					<div style="font-size:18px!Important;margin-top:-45px;margin-bottom:10px;width:100%"><b>'+data[i].login.toUpperCase()+', ' + data[i].age+'</b><div style="font-wight:300;font-family:Open Sans;font-size:15px;color:silver"><b>'+data[i].location.toUpperCase().substr(0,15) + '</b></div><div id="location'+i+'" class=""></div><div style="height:70px;font-size:12px!Important;padding-left:30px;padding-right:30px">'+general_info+'</div></div>'
-							str+=	'						<table style="width:100%;text-align:center;margin:auto;margin-top:-45px;width:70%;">'
-							str+=	'							<tr><td colspan=4><a href="javascript:dislike(\'p'+data[i].id+'\')"><img src="images/nav9.png" style="width:60px;margin-bottom:5px;margin-right:20px;"></a> <a href="javascript:like(\'p'+data[i].id+'\')"><img src="images/nav4.png" style=";margin-left:20px;width:60px;margin-bottom:5px"></a></td></tr><tr style="height:10px"><td colspan=4></td></tr>'
+							str+=	'						<table style="width:100%;text-align:center;margin:auto;margin-top:-25px;width:70%;">'
+							str+=	'							<tr><td colspan=4><a href="javascript:dislike(\'p'+data[i].id+'\')"><img src="images/nav9.png" style="width:40px;margin-bottom:2px"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="javascript:like(\'p'+data[i].id+'\')"><img src="images/nav4.png" style="width:40px;margin-bottom:2px"></a></td></tr><tr style="height:10px"><td colspan=4></td></tr>'
 							str+=	'								<tr style="margin-top:-10px"><td style="width:15%;text-align:center"><a href="javascript:wishlist('+data[i].id+')" style="text-decoration:none"><img src="images/new_wish.png" style="width:25px"></a></td>'
 							str+=	'									<td style="width:15%;text-align:center"><a href="javascript:coming_soon()"><img src="images/offer.png" style="width:25px;opacity:1"></a></td>'
 							str+=	'									<td style="width:15%;text-align:center"><a href="javascript:coming_soon()"><img src="images/rewards.png" style="width:20px;opacity:2"></a></td>'
@@ -813,9 +814,6 @@
 				
 			}
 		})
-	}
-	function buy_rose() {
-		location.href='checkout.html?item=Long Stemmed Red Rose&qty=1&price=2&type=product'
 	}
 	function coming_soon() {
 		$.alert('This feature will be avaialable on Nov 1st 2019')
@@ -1207,8 +1205,14 @@ function detectswipe(el,func) {
 		if (speed>1) speed
 		window.speed=speed
 	}
-	
-	
+	if (getCookie('shownOnce') !=='yes') {
+		var hd=document.createElement('div')
+		hd.style.cssText='opacity:0.9;box-shadow:5px 5px 10px rgba(0,0,0,0.7);padding:0;position:fixed;z-index:9999999999999999999;top:50px;left:0;right:0;width:100%;height:200px;background:lightyellow;border:0px solid silver;font-family:Open Sans!Important'
+		hd.innerHTML='<table style="margin:0;width:100%"><tr><td style="width:70px;text-align:center;background:black;color:white;font-size:2em"><img src="https://sugardaddylocal.com/images/giphy.gif" style="width:75px"><br><b><strong> TIP! </b></strong></td><td style="text-align:left;padding:15px;font-family:Open Sans!Important; font-size:16px;color:black"><strong><b>HOW DO I VIEW THE NEXT PROFILE?</b></strong><div style="font-family:Open Sans!Important; font-size:14px;color:black">You could SWIPE left or right; Swiping Left addionally indicates that you are not interested in that person; Swiping right means that you are;<br><br>Alternatively, you could also simple click on the 2 [Thumbs Up] or [Thumbs Down] icons below.<br><br><b><strong>CLICK ANYWHERE IN THE BOX TO CLOSE</strong></b></div></td></tr></table>'
+		document.documentElement.appendChild(hd)
+		setCookie('shownOnce','yes')
+		hd.onclick=function(){hd.className='magictime spaceOutRight'}
+	}
 </script>
 </body>
 </html>
